--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,19 +1,8 @@
-$main_font : "Montserrat", sans-serif;
+@use 'variables' as *;
 
 body {
     font-family: $main_font;
     font-optical-sizing: auto;
     font-style: normal;
-}
-
-h1 {
-    font-family: $main_font;
-}
-
-p {
-    font-family: $main_font;
-}
-
-a {
-    font-family: $main_font;
+    color: $black;
 }
