--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,40 +1,45 @@
-@use 'base/variables' as *;
-@use 'base/mixins' as *;
+@use 'base/variables' as v;
+@use 'base/mixins' as m;
 
 /* Header styles */
 
 .header {
-    background-color: $green;
-    
-    @include phone { // include for mixins
-        color: $white;
-        width: 1rem;
-        height: 0.1rem;
-    }
-    
+    background-color: v.$green;
 
     .header-content {
         padding: 2rem;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        @include m.tablet {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
     }
 
     h1 {
-        color: $white;
-        margin: 0;
+        color: v.$white;
+        text-align: center;
+        @include m.tablet {
+            text-align: left;
+            margin: 0;
+        }
     }
 }
 
 .main-navigation {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 2rem;
+    @include m.tablet {
+        flex-direction: row;
+    }
+
     a {
-        color: $white;
+        color: v.$white;
         font-size: 2.4rem;
 
         &:hover{
-            color: $yellow;
+            color: v.$yellow;
         }
     }
 }
