--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -30,3 +30,9 @@
     max-width: 120rem;
     margin: 0 auto;
 }
+
+@mixin grid($columns: 1, $gap: 5rem) {
+    display: grid;
+    grid-template-columns: repeat($columns, 1fr);
+    gap: $gap;
+}
