--- a/src/scss/layout/_festival.scss
+++ b/src/scss/layout/_festival.scss
@@ -4,9 +4,7 @@
 .about-festival {
     @include m.container;
     @include m.tablet {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 5rem;
+        @include m.grid(2);
     }
 }
 
