--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -22,6 +22,10 @@ body {
     font-style: normal;
     color: v.$black;
     font-size: 2rem;
+
+    &.overflow-hidden {
+        overflow: hidden;
+    }
 }
 p {
     color: v.$black;
