--- a/src/scss/layout/_gallery.scss
+++ b/src/scss/layout/_gallery.scss
@@ -23,3 +23,58 @@
         }
     }
 }
+
+.modal {
+    position: fixed;
+    inset: 0;
+    background-color: rgba($color: v.$black, $alpha: 0.5);
+    display: grid;
+    place-items: center;
+    animation: fadeIn ease-in 0.5s;
+
+    &.fade-out {
+        animation: fadeOut ease-in 0.5s;
+    }
+
+
+
+    img {
+        max-width: 70rem;
+        @include m.desktopXL {
+            max-width: 100rem;
+        }
+    }
+}
+
+.btn-close {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background-color: v.$white;
+    border: none;
+    color: v.$black;
+    display: grid;
+    place-items: center;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
