--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -6,6 +6,16 @@
 .header {
     background-color: v.$green;
 
+    @include m.tablet{
+        &.fixed {
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            box-shadow: .1rem .2rem .3rem #333;
+        }
+    }
+
     .header-content {
         padding: 2rem;
         @include m.tablet {
