added linking animation for nav sections

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -48,7 +48,8 @@
         color: v.$white;
         font-size: 2.4rem;
 
-        &:hover{
+        &:hover,
+        &.active{
             color: v.$yellow;
         }
     }
